# feedsomeone

./: .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Pipfile  RUNBOOK.md  build.sh  categories.yml  coverage.xml  custom_test_runner.py  db.json  db.sqlite3  design-qa.md  docker-compose.yml  manage.py  parse_test_results.py  pyproject.toml  readme.md  render.yaml  requirements.txt  settings.ini
.github/: FUNDING.yml
.github/workflows/: django.yml  keep-render-awake.yml
assets/css/: admin-baton-overrides.css  bootstrap.min.css.map  donatestyle.css  jquery.fileupload-ui.css  main.css  opportunities.css  style.css
assets/js/: bootstrap.min.js.map  jquery.iframe-transport.js  main.js
assets/scss/: _h1-hero.scss
blog/: admin.py  forms.py  models.py  rss_feeds.py  sitemaps.py  test.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_auto_20201106_1257.py  0002_initial.py  0003_article_tags.py  0007_article_tags.py  (+6 more)
config/: settings.py.bak  urls.py
contact/: forms.py  models.py  test.py  urls.py  views.py
errors/: views.py
events/: admin.py  models.py  test_gallery.py  urls.py  views.py
ext_libs/: email_service.py
feedsomeone/: .env  asgi.py  base.py  local.py  prod.py  settings.py  settings.py.save  settings.py.save.1  settings.py.save.2  settings.py.save.4  settings.py.save.5  urls.py  wsgi.py
mainsite/: admin.py  models.py  sitemaps.py  test.py  test_gallery.py  test_public_pages.py  tests.py  urls.py  utils.py  views.py
opportunities/: admin.py  forms.py  models.py  notifications.py  offers.py  storage.py  test_offers.py  tests.py  urls.py  views.py
rave_python/: misc.py  rave.py  rave_base.py  rave_card.py  rave_transfer.py
scripts/: verify_ui.ps1
static/: index.html
templates/: 400.html  403.html  404.html  500.html  about.html  acc_activation_email.html  base.html  base.html.save  base.html.save.1  blog_details.html  contact.html  create_username.html  demo-payment.html  donate-copy.html  donate-draft.html  donate.html  donate.html.save  donate.html.save.1  events.html  file_upload.html  gallery.html  home.html  impact.html  login.html  logout.html  new_account_notice.html  new_email.html  newsletter_form.html  pagination.html  privacy.html  profile.html  register.html  robot_response.html  terms_of_service.html  thank-you.html  thanks-donation.html  transparency.html  upload_form.html  upload_images.html  what-is-oef.html
user/: admin.py  enums.py  forms.py  mocks.py  models.py  signals.py  tests.py  urls.py  views.py  views.py.save
utils/: auth.py  decorators.py  email.py  enums.py  extras.py  forms.py  objects.py  test_views.py  views.py
(+140 files in other folders)
