[tool.poetry]
name = "feedsomeone"
version = "0.0.1"
description = "NGO web app"
authors = ["EBENEZER <9444817+bencipher@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asgiref = "==3.8.1"
babel = "==2.10.1"
bleach = "==5.0.0"
boto3 = "==1.23.1"
botocore = "==1.26.1"
certifi = "==2024.8.30"
chardet = "==3.0.4"
charset-normalizer = "==2.0.12"
cloudinary = "==1.29.0"
defusedxml = "==0.7.1"
diff-match-patch = "==20241021"
dj3-cloudinary-storage = "==0.0.6"
django = "==5.2.16"
django-appconf = "==1.0.5"
django-crispy-forms = "==1.14.0"
django-donations = "==1.2.0"
django-imagefit = "==0.8.1"
django-import-export = "==4.4.1"
django-money = "==2.1.1"
django-recaptcha = "==3.0.0"
django-storages = "==1.10.1"
django-summernote = "==0.8.20.0"
et-xmlfile = "==1.0.1"
idna = "==3.3"
jdcal = "==1.4.1"
jmespath = "==1.0.0"
markuppy = "==1.14"
odfpy = "==1.4.1"
openpyxl = "==3.0.5"
pillow = "==11.1.0"
psycopg2-binary = "==2.9.9"
py-moneyed = "==1.2"
pycryptodome = "==3.14.1"
python-dateutil = "==2.8.2"
python-decouple = "==3.6"
pytz = "==2022.1"
pyyaml = "==6.0.2"
requests = "==2.34.0"
s3transfer = "==0.5.2"
six = "==1.16.0"
sqlparse = "==0.4.2"
tablib = "==3.7.0"
tzdata = "==2022.1"
urllib3 = "==1.26.9"
webencodings = "==0.5.1"
xlrd = "==1.2.0"
xlwt = "==1.3.0"
pre-commit = "==3.2.2"
whitenoise = "==6.4.0"
django-taggit = "==6.1.0"
markdown = "==3.2.1"
django-honeypot = "==1.3.0"
django-honeypot-admin = "==2.0.0"
social-auth-app-django = "==6.0.0"
django-extensions = "==4.1"
werkzeug = "==0.16.0"
pyopenssl = "==25.3.0"
cffi = "==2.0.0"
cfgv = "==3.3.1"
click = "==8.1.3"
colorama = "==0.4.6"
cryptography = "==46.0.7"
distlib = "==0.3.6"
django-baton = "==2.6.0"
django-ckeditor = "==6.5.1"
django-debug-toolbar = "==7.0.0"
django-formtools = "==2.4"
djangorestframework = "==3.13.1"
filelock = "==3.12.0"
gunicorn = "==20.1.0"
identify = "==2.5.22"
marshmallow = "==3.19.0"
nodeenv = "==1.7.0"
oauthlib = "==3.3.1"
packaging = "==23.0"
pip-autoremove = "==0.10.0"
platformdirs = "==3.2.0"
pycparser = "==2.21"
pygitguardian = "==1.3.1"
pyjwt = "==2.13.0"
python-dotenv = "==1.0.0"
python-http-client = "==3.3.7"
python3-openid = "==3.2.0"
requests-oauthlib = "==2.0.0"
sendgrid = "==6.9.7"
setuptools = "==75.8.0"
social-auth-core = "==5.0.1"
starkbank-ecdsa = "==2.2.0"
virtualenv = "==20.23.0"
rave-python = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "*"
ggshield = "*"
django-debug-toolbar = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
